# cpp-lang-practice

./: CMakeLists.txt  README.md
chapter1/: lesson1.cpp
include/: course_lesson2.h  program.h
src/course/: main.cpp
src/course/lesson2/: main.cpp
src/course/lesson3/: header.h  main.cpp
src/task_book/algorithm/: lesson10.cpp  lesson11.cpp  lesson9.cpp
src/task_book/chapter1/: lesson2.cpp
src/task_book/files/: lesson3.cpp  lesson4.cpp
src/task_book/games/: game1.cpp
src/task_book/oop/: lesson5.cpp  lesson6.cpp  lesson7.cpp  lesson8.cpp
